fixed home page spacing for phone

--- a/css/styles_home.css
+++ b/css/styles_home.css
@@ -149,6 +149,12 @@ ul {
         width: 100%;
     }
 
+    .main_content {
+        width: 100%;
+        padding-left: 0% !important;
+        padding-right: 0% !important;
+    }
+
 }
 
 /* adjust padding so content is centred in viewport */
